<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="24dp">

    <!-- Title -->
    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_s_trending"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:gravity="center"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Search bar -->
    <FrameLayout
        android:id="@+id/searchBarFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_music_videos"
            android:background="@drawable/edit_search_background"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:paddingEnd="48dp"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:text="@string/go"
            android:minWidth="48dp"
            android:backgroundTint="@color/design_default_color_error"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videoRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/what_s_trending"
        app:layout_constraintTop_toBottomOf="@id/searchBarFrame"
        app:layout_constraintBottom_toTopOf="@id/viewPlaylistButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- View Playlist Button -->
    <Button
        android:id="@+id/viewPlaylistButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/view_playlist"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>